Spring boot version and hibernate config changed

--- a/CircleCI/src/main/resources/application.yml
+++ b/CircleCI/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     driverClassName: org.h2.Driver
   jpa:
     database-plataform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
   h2:
     console:
       enabled: true
