--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,7 @@ jobs:
         distribution: 'adopt'
         cache: gradle
     - name: Make gradlew executable
-      run: chmod +x ./gradlew
+      run: chmod +x ./gradle
 
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradle build
