--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,6 +23,7 @@ jobs:
         distribution: 'adopt'
         cache: gradle
     - name: Make gradlew executable
-      run: chmod +x .\gradlew
+      run: chmod +x ./gradlew
+      
     - name: Build with Gradle
-      run: .\gradlew build
+      run: ./gradlew build
