--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,6 +16,9 @@ jobs:
       
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      
-      - name: Build with Gradle
+
+      - name: Build Gradle
+        run: ./gradlew
+
+      - name: Build and test
         run: ./gradlew build
