--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,5 +42,7 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
+      - run: gradle
+        -
       # run tests!
       - run: gradle test
