--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'jacoco'
+    id 'org.sonarqube' version '3.3'
+    id 'com.avast.gradle.docker-compose' version '0.14.3'
 }
 
 group = 'CircleCI'
@@ -35,8 +37,8 @@ dependencies {
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
-    testImplementation"org.mockito:mockito-core:3.3.3"
-    testImplementation"org.mockito:mockito-inline:3.6.28"
+    testImplementation "org.mockito:mockito-core:3.3.3"
+    testImplementation "org.mockito:mockito-inline:3.6.28"
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
 
@@ -45,8 +47,22 @@ dependencies {
 
     testCompileOnly 'junit:junit:4.13'
 
+}
 
+sonarqube {
+    properties {
+        property 'sonar.coverage.exclusions',[
+                '**/api/**',
+                '**/config/**',
+                '**/repository/**',
+                '**/model/**',
+                '**/CircleCiApplication*'
+        ]
+        property 'sonar.host.url', 'http://localhost:9000'
+        property 'sonar.login', 'admin'
+        property 'sonar.password', 'sonar'
 
+    }
 }
 
 jacoco {
@@ -78,7 +94,7 @@ jacocoTestReport {
 }
 
 
-test {
-    finalizedBy jacocoTestReport
-    useJUnitPlatform()
+test.finalizedBy jacocoTestReport
+tasks.named('sonarqube').configure {
+    dependsOn test
 }
