--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ sonarqube {
         ]
         property 'sonar.host.url', 'http://localhost:9000'
         property 'sonar.login', 'admin'
-        property 'sonar.password', 'sonar'
+        property 'sonar.password', 'admin'
 
     }
 }
